# pmp-backoffice-generator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: README.md  ci.yml  coverage.yml  release.yml  security.yml
config/: config.yaml
config/backoffices/: advanced-fields.yaml  all-features.yaml  extended-features.yaml  products.yaml  users.yaml
docs/: EXAMPLES.md  FEATURES.md  QUICK_START.md
examples/: README.md  blog-with-relationships.yaml  ecommerce-with-audit.yaml
src/: audit.rs  config.rs  data_source.rs  lib.rs  main.rs  relationships.rs  server.rs  validation.rs
static/: app.js  index.html
tests/: integration_test.rs
