[package]
name = "pmp-backoffice-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite"], optional = true }

# MongoDB support
mongodb = { version = "2.8", optional = true }

# Redis support
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Elasticsearch support
elasticsearch = { version = "8.5.0-alpha.1", optional = true }

# AWS S3 support
aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.15", optional = true }

# HTTP client for API data sources
reqwest = { version = "0.11", features = ["json"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
async-trait = "0.1"
url = "2.5"
base64 = "0.21"
futures = "0.3"

[features]
default = ["database", "mongodb", "redis", "elasticsearch", "s3"]
database = ["sqlx"]
mongodb = ["dep:mongodb"]
redis = ["dep:redis"]
elasticsearch = ["dep:elasticsearch"]
s3 = ["aws-config", "aws-sdk-s3"]

[lib]
name = "pmp_backoffice_generator"
path = "src/lib.rs"

[[bin]]
name = "pmp-backoffice-generator"
path = "src/main.rs"
