[package]
name = "pmp-backoffice-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "json"] }

# HTTP client for API data sources
reqwest = { version = "0.11", features = ["json"] }

# Validation
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
validator = "0.18"

# Data sources (optional)
mongodb = { version = "2.8", optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
async-trait = "0.1"

[features]
default = ["database", "mongodb-datasource", "redis-datasource", "s3-datasource", "websocket-datasource"]
database = []
mongodb-datasource = ["mongodb"]
redis-datasource = ["redis"]
s3-datasource = ["aws-sdk-s3", "aws-config"]
websocket-datasource = ["tokio-tungstenite"]

[lib]
name = "pmp_backoffice_generator"
path = "src/lib.rs"

[[bin]]
name = "pmp-backoffice-generator"
path = "src/main.rs"
